Fix image overflow: add max-width 100% to screen img

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -155,6 +155,8 @@ img {
   border: 0;
   vertical-align: middle;
   -ms-interpolation-mode: bicubic;
+  max-width: 100%;
+  height: auto;
 }
 
 /* Correct overflow not hidden in IE9 */
